Ivan's Asynchronous patch OPENEJB-1165 Slight tweaks
git-svn-id: https://svn.apache.org/repos/asf/openejb/trunk/openejb3@995290 13f79535-47bb-0310-9956-ffa450edef68